[package]
name = "lockserver"
version = "0.1.0"
edition = "2024"
description = "A distributed lock server for coordinating access to shared resources."

authors = ["Ben Liao <abenliao@gmail.com>"]
license = "MIT"
repository = "https://github.com/benliao/lockserver"
documentation = "https://docs.rs/lockserver"
homepage = "https://github.com/benliao/lockserver"
readme = "README.md"
keywords = ["distributed", "lock", "server", "synchronization", "concurrency"]
categories = ["concurrency", "network-programming", "distributed"]
exclude = [".github/*", "tests/*", "examples/*", "target/*", ".env", ".env.example"]
rust-version = "1.85"

[badges]
travis-ci = { repository = "benliao/lockserver" }
github-actions = { repository = "benliao/lockserver", workflow = "CI" }
maintenance = { status = "actively-developed" }

[dependencies]
thiserror = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
